<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <!-- Summary Card: Total Income & Total Expense -->
    <androidx.cardview.widget.CardView
        android:id="@+id/summaryCard"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <TextView
                android:id="@+id/totalIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total Income: Ksh 0.00"
                android:textColor="#4CAF50"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total Spent: Ksh 0.00"
                android:textColor="#F44336"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Top Section -->
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:background="@color/secondary_alternate"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/summaryCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

            <EditText
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/search_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="@string/search"
                android:hint="@string/search"
                android:background="@drawable/text_background"
                android:inputType="text"
                android:paddingStart="60dp"
                android:paddingEnd="20dp"
                android:layout_gravity="center"/>

            <ImageView
                app:layout_constraintTop_toTopOf="@+id/search_field"
                app:layout_constraintStart_toStartOf="@+id/search_field"
                app:layout_constraintBottom_toBottomOf="@+id/search_field"
                android:layout_width="30dp"
                android:id="@+id/search_icon"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/search"
                android:src="@drawable/search"
                android:layout_gravity="center"/>

            <ImageButton
                android:id="@+id/select_date"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="352dp"
                android:background="@android:color/transparent"
                android:contentDescription="@drawable/date"
                android:src="@drawable/date"
                app:layout_constraintBottom_toBottomOf="@+id/search_field"
                app:layout_constraintStart_toEndOf="@+id/search_icon"
                app:layout_constraintTop_toTopOf="@+id/search_field"
                app:layout_constraintVertical_bias="0.615" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <!-- ScrollView -->
    <HorizontalScrollView
        android:id="@+id/scroll_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/text_background"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/tvPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_method"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </HorizontalScrollView>

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll_section"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/transaction_list" />

    <!-- Bottom Navigation -->
</androidx.constraintlayout.widget.ConstraintLayout>
